# result.hpp

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
.github/workflows/: ci.yml  codeql.yml
src/: result.hpp
tests/: result_tests.cpp
